# ntarobot_pkg

./: README.md
bno055/bno055/params/: NodeParameters.py  bno055_params.yaml
diseno_ntarobot/: CMakeLists.txt
diseno_ntarobot/launch/: display.launch.py  gazebo.launch.py
diseno_ntarobot/urdf/: ntarobot.urdf.xacro  ntarobot_core.xacro  ntarobot_intertial.xacro  ntarobot_matprop.xacro
ntarobot_cpp/: CMakeLists.txt  package.xml
ntarobot_cpp/config/: motordriver_params.yaml  odomEnc_params.yaml
ntarobot_cpp/include/ntarobot_cpp/: md49_controller.hpp  ntarobot_controller.hpp  ntarobot_odom.hpp
ntarobot_cpp/launch/: ntarobot_bringup.launch.py
ntarobot_cpp/src/: md49_controller.cpp  nodo_primera_prueba.cpp  ntarobot_controller.cpp  ntarobot_odom.cpp
ntarobot_execpkg/: CMakeLists.txt  package.xml
ntarobot_execpkg/config/: camera_config.yaml  ekf.yaml
ntarobot_execpkg/launch/: generalrobot_launch.launch.py  ntarobot_launch.launch.py
ntarobot_navigation/: CMakeLists.txt  package.xml
ntarobot_navigation/config/: params_general.yaml
ntarobot_navigation/launch/: ntarobot_nav.launch.py
ntarobot_navigation/maps/: ctXVIII.pgm  ctXVIII.yaml
ntarobot_navigation/params/: ntarobot_nav_params_real.yaml
ntarobot_urdf/: CMakeLists.txt  package.xml
ntarobot_urdf/launch/: display.launch.py  gazebo.launch.py
ntarobot_urdf/rviz/: display.rviz
ntarobot_urdf/urdf/: ntarobot.urdf.xacro  ntarobot_core.xacro  ntarobot_gazebo.xacro  ntarobot_ros_control.xacro
rpldiar_ros/launch/: rplidar_a2m8_launch.py  view_rplidar_a2m8_launch.py
slam_gmapping/launch/: slam_gmapping.launch.py
slam_gmapping/src/: slam_gmapping.cpp
solver_untils/: CMakeLists.txt
solver_untils/msg/: RawSpeed.msg
usb_cam/src/ros2/: usb_cam_node.cpp
